load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/djamaile/mango/server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/releases",
        "@com_github_gorilla_mux//:go_default_library",
    ],
    data = [
        "//pages:generated_pages"
    ]
)

go_binary(
    name = "server",
    embed = [":lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "mango_container",
    embed = [":lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_push(
    name = "image_push",
    format = "Docker",
    image = ":mango_container",
    registry = "index.docker.io",
    repository = "djam97",
    tag = "latest",
)
